# ghg-calculator

./: .gitignore  README.md  pyproject.toml  sample.json  texas_hyperscaler_2025.json
.claude/skills/ghg-analyze/: SKILL.md
docs/: index.html
scripts/: build_factors.py
src/ghg_calculator/: __init__.py
src/ghg_calculator/cli/: app.py
src/ghg_calculator/engine/: __init__.py  base.py  calculator.py
src/ghg_calculator/engine/scope1/: __init__.py  fugitive.py  mobile.py  process.py  stationary.py
src/ghg_calculator/engine/scope2/: __init__.py  electricity.py
src/ghg_calculator/engine/scope3/: __init__.py  base.py
src/ghg_calculator/factors/: __init__.py  gwp.py  loader.py  registry.py
src/ghg_calculator/factors/data/defra/: v2025.json
src/ghg_calculator/factors/data/egrid/: v2024.json
src/ghg_calculator/factors/data/ember/: v2024.json
src/ghg_calculator/factors/data/epa_hub/: v2025.json
src/ghg_calculator/factors/data/exiobase/: v3_8.json
src/ghg_calculator/factors/data/useeio/: v1_3.json
src/ghg_calculator/mcp/: server.py
src/ghg_calculator/models/: __init__.py  activity.py  enums.py  factors.py  quality.py  report.py  results.py
src/ghg_calculator/reporting/: __init__.py  charts.py  generator.py  tables.py
src/ghg_calculator/reporting/formats/: cdp.py  ghg_protocol.py  gri305.py
src/ghg_calculator/units/: converter.py
tests/e2e/: test_cli.py
tests/integration/: test_calculator.py
tests/unit/: test_gwp.py  test_models.py  test_registry.py  test_units.py
