[project]
name = "ghg-calculator"
version = "0.1.0"
description = "GHG Protocol Corporate Standard emissions calculator with CLI and MCP interfaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pint>=0.24",
    "pandas>=2.0",
    "plotly>=5.18",
    "typer>=0.12",
    "rich>=13.0",
    "fastmcp>=2.0",
    "jinja2>=3.1",
    "kaleido>=0.2",
]

[project.scripts]
ghg = "ghg_calculator.cli.app:app"
ghg-mcp = "ghg_calculator.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghg_calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]
